# PrivacySuite-Core-SDK

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  audit.toml  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/research/: blind-index-api-ramifications.md  standalone-crate-android-jni-ramifications.md
privacysuite-ffi/: Cargo.toml  uniffi.toml
privacysuite-ffi/android/: .gitignore  README.md  build-aar.sh  build.gradle.kts  settings.gradle.kts
privacysuite-ffi/android/ffi/: build.gradle.kts
privacysuite-ffi/android/ffi/src/main/: AndroidManifest.xml
privacysuite-ffi/android/gradle/wrapper/: gradle-wrapper.properties
privacysuite-ffi/src/: lib.rs
src/: auth.rs  crdt.rs  error.rs  lib.rs  logging.rs  networking.rs  privacy_utils.rs  storage.rs  sync.rs
src/auth/: mod.rs  pin_lock.rs
src/crypto/: aead.rs  blind_index.rs  hash.rs  hkdf.rs  kdf.rs  keys.rs  mnemonic.rs  mod.rs  pairing.rs  pinning.rs  stream.rs  util.rs
src/networking/: mod.rs  ohttp.rs  privacy_client.rs
src/privacy_utils/: mod.rs  url.rs
src/sync/: background.rs  mod.rs
tauri-plugin-privacysuite/: Cargo.toml
tauri-plugin-privacysuite/src/: commands.rs  lib.rs  models.rs
