[workspace]
members = [".", "tauri-plugin-privacysuite", "privacysuite-ffi"]
resolver = "2"

[package]
name = "privacysuite-core-sdk"
# Crate version tracks the git tag cut from each release. Mirrors the FFI
# crate's versioning posture (see `privacysuite-ffi/Cargo.toml`). The git
# tag (e.g. `v0.4.0`) is the actual pin mechanism — apps consume via
# `{ git = "...", tag = "v0.4.0" }` rather than crates.io.
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
description = "Zero-knowledge cryptographic foundation for BoomLeft applications"
authors = ["BoomLeft LLC"]
license = "Proprietary"
repository = "https://github.com/mkfnch/PrivacySuite-Core-SDK"
publish = false

[features]
default = ["auth"]
# `auth` pulls in `serde` so `auth::pin_lock::PinAttemptState` can be
# (de)serialised by callers that persist it to disk (shared-prefs,
# SQLite row, on-disk JSON blob, ...). `serde` was already an optional
# dependency gated behind `sync`, so enabling it here just activates it
# eagerly for the auth-only build rather than introducing a new
# dependency. See `auth::pin_lock` for why callers need the derive.
auth = ["dep:opaque-ke", "dep:serde"]
storage = ["dep:rusqlite"]
sync = ["dep:automerge", "dep:tokio", "dep:tokio-tungstenite", "dep:native-tls", "dep:tokio-native-tls", "dep:futures-util", "dep:serde", "dep:serde_json"]
networking = ["dep:hickory-resolver", "dep:tokio-socks", "dep:tokio"]
# Oblivious HTTP (RFC 9458) client. Pure-Rust HPKE (DHKEM(X25519,
# HKDF-SHA256) / HKDF-SHA256 / ChaCha20-Poly1305) built on the SDK's
# existing crypto primitives. Requires a caller-provided
# `OhttpTransport` impl — the SDK intentionally does not ship an HTTP
# client to keep the supply chain minimal. See `networking::ohttp`.
ohttp = ["networking", "dep:async-trait"]
# High-level HTTP client composing DoH / OHTTP / Tor tiers (G1). Pulls
# in `reqwest` with a minimal, rustls-only feature set. Gated behind
# its own feature so SDK consumers that only want the lower-level
# primitives (DoH, OHTTP trait, TorClient) don't drag in an HTTP
# client stack. See `networking::privacy_client`.
http = ["networking", "ohttp", "dep:reqwest", "dep:futures-util"]
# Android Keystore / StrongBox wrapper around `VaultKey` (G5). Pulls in
# the `jni` and `ndk-context` crates used for the JNI bridge. The
# `keystore::android` implementation is `#[cfg(target_os = "android")]`-
# gated, so enabling this feature on a non-Android host exposes only the
# stub types (every entry point returns `KeystoreError::NotAvailable`).
# See `keystore::android`.
keystore = ["dep:jni", "dep:ndk-context"]
full = ["auth", "storage", "sync", "networking", "ohttp", "http", "keystore"]

[dependencies]
# --- Crypto primitives (always available) ---
# SECURITY: All crypto dependencies pinned to exact versions to prevent supply chain attacks.
argon2 = "=0.5"
chacha20poly1305 = "=0.10"
# SECURITY: zeroize aligned with opaque-ke 3.0's ^1.8 constraint; 1.8.2
# is the most recent stable at audit time and is reproducibly pinned.
zeroize = "=1.8.2"
# SECURITY: We rely only on OsRng for OS randomness — never thread_rng /
# rand::rng. That lets us depend on the minimal rand_core + getrandom
# stack instead of the full rand crate (which ships RUSTSEC-2026-0097
# ThreadRng unsoundness in <0.9.3 / 0.10.0). This also shrinks the
# supply-chain footprint by removing rand_chacha and ppv-lite86.
rand_core = { version = "=0.6", features = ["getrandom"] }
getrandom = "=0.2"
sha2 = "=0.10"
hmac = "=0.12"
pbkdf2 = "=0.12"
subtle = "=2"

# --- Device pairing + signing (always available) ---
# SECURITY: static_secrets is required for long-lived pairing keys; zeroize
# is enabled by default and provides ZeroizeOnDrop on StaticSecret.
x25519-dalek = { version = "=2", features = ["static_secrets"] }
# SECURITY: rand_core is required for SigningKey::generate; zeroize is
# enabled by default and provides ZeroizeOnDrop on SigningKey.
ed25519-dalek = { version = "=2", features = ["rand_core"] }
blake3 = "=1"
base64 = "=0.22"

# --- URL parsing for tracking-param stripping (always available) ---
# Used by privacy_utils to strip tracking parameters from URLs. default-features
# are disabled to avoid pulling in the `idna` unicode tables where unnecessary,
# reducing the supply-chain footprint.
url = "=2"

# --- Encrypted storage (optional: "storage" feature) ---
rusqlite = { version = "=0.36", features = ["bundled-sqlcipher"], optional = true }

# --- CRDT sync (optional: "sync" feature) ---
automerge = { version = "=0.8", optional = true }

# --- OPAQUE authentication (optional: "auth" feature) ---
opaque-ke = { version = "=3", optional = true }

# --- Privacy networking + sync (optional: "sync" / "networking" features) ---
tokio = { version = "=1", features = ["rt", "net", "io-util", "sync", "time", "macros"], optional = true }
hickory-resolver = { version = "=0.25", features = ["https-ring"], optional = true }
tokio-tungstenite = { version = "=0.26", features = ["native-tls"], optional = true }
# SECURITY: Direct dependencies on native-tls and tokio-native-tls are
# required for the post-handshake TLS pin-check performed in
# `sync::RelayTransport::connect_with_pinner` — see Audit 2 Finding #1.
# Versions pinned to exactly what tokio-tungstenite's `native-tls`
# feature already pulls in, so no new transitive versions are introduced.
native-tls = { version = "=0.2.18", optional = true }
tokio-native-tls = { version = "=0.3.1", optional = true }
futures-util = { version = "=0.3", default-features = false, features = ["sink"], optional = true }
tokio-socks = { version = "=0.5", optional = true }

# --- Serialization (optional: "sync" feature) ---
serde = { version = "=1", features = ["derive"], optional = true }
serde_json = { version = "=1", optional = true }

# --- OHTTP client (optional: "ohttp" feature) ---
# async-trait is required for the `OhttpTransport` abstraction — callers
# implement this trait to plug their own HTTP client into the OHTTP flow
# (so the SDK never ships a reqwest/hyper stack of its own). 0.1.89 is the
# version already in Cargo.lock via the existing transitive graph, which
# keeps multiple-versions clean.
async-trait = { version = "=0.1.89", optional = true }

# --- High-level HTTP client (optional: "http" feature) ---
# SECURITY: reqwest is allow-listed in deny.toml as a permitted
# transitive network dependency; bringing it in as a direct dep
# (gated behind `http`) keeps the supply-chain story explicit.
# default-features = false drops the default native-tls path — the
# SDK is RustCrypto/rustls only (openssl / openssl-sys are banned in
# deny.toml).
#
# Minimal feature set:
#   * `rustls-tls`  — pure-Rust TLS, no openssl
#   * `gzip`, `brotli` — RSS/podcast CDNs routinely compress; decoding
#     inside the tier client applies the response-size cap to
#     *decoded* bytes, matching what higher layers see.
#   * `socks`       — required for the Tor tier's `socks5h://` proxy
#   * `stream`      — required so `PrivacyClient::fetch` can enforce
#     the response-size cap without buffering the full body first.
#   * `http2`       — HTTP/2 multiplexing; mainstream clients speak h2,
#     leaving it off would hurt fingerprint parity.
reqwest = { version = "=0.12.28", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "socks",
    "stream",
    "http2",
], optional = true }

# --- Android Keystore wrapper (optional: "keystore" feature, Android-only) ---
# SECURITY: These deps are only *used* on `target_os = "android"` — the
# `keystore::android` module is `cfg`-gated. Leaving them as unconditional
# optional deps (rather than `[target.'cfg(target_os = "android")']`-scoped)
# means host `cargo check --all-features` still compiles and exercises the
# stub path without ever instantiating a JNI call. Exact-version pinning
# matches the rest of the crate's supply-chain posture; the versions are
# aligned with Blackout's vetted `SecureSecretStore` bridge.
jni = { version = "=0.21", optional = true }
ndk-context = { version = "=0.1", optional = true }

[dev-dependencies]
# SECURITY: Dev dependencies also pinned to prevent test environment drift.
tempfile = "=3"
tokio = { version = "=1", features = ["rt", "net", "io-util", "sync", "time", "macros"] }
serde = { version = "=1", features = ["derive"] }
serde_json = "=1"
hex = "=0.4"

# SECURITY: `unsafe_code` is configured at *deny* rather than *forbid* so
# one specific site — the Android JNI bridge in `keystore::android` —
# can opt in via `#[allow(unsafe_code)]`. Every other module remains
# 100 % safe Rust; `grep -r "allow(unsafe_code)" src/` should only ever
# surface that single Android Keystore site. The bridge's `unsafe` is
# limited to adopting the raw `JavaVM*` pointer supplied by the NDK at
# process start — see the SAFETY comment in `keystore::android`.
[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
mem_forget = "deny"
large_stack_arrays = "warn"
indexing_slicing = "warn"
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

# Used by the privacysuite-ffi Android AAR build. uniffi-bindgen reads
# UniFFI metadata symbols out of the .symtab section; the standard
# release profile strips symbols for production-binary size, which
# removes the metadata. This profile inherits every other hardening knob
# from release but keeps symbols intact. The AAR build pipeline strips
# the final .so files itself after uniffi-bindgen has run.
[profile.release-ffi]
inherits = "release"
strip = "none"

[profile.dev]
overflow-checks = true
debug = true
